feat: 完成图片尺寸调整功能.
