# docs/swagger.yaml
@@ -31,13 +31,9 @@ definitions:
         description: 收藏人数
         example: 0
         type: integer
-      mediumURI:
+      midURI:
         description: 中图地址
-        example: TODO
-        type: string
-      smallURI:
-        description: 小图地址
-        example: TODO
+        example: assert/images/med_68c8d808-54f7-4cfc-94c9-015416033dc9.jpg
         type: string
       title:
         description: 图片标题
